--- a/public/frontend/package.json
+++ b/public/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "dependencies": {
     "jquery": "^2.2.1",
+    "moment": "^2.12.0",
+    "react-datetime": "^2.1.0",
     "reflux": "^0.3.0",
     "reflux-state-mixin": "^0.7.0"
   },
